# OpenGL

./: .gitignore  CMakeLists.txt
include/: camera.hpp  input.hpp  shader.hpp  texture.hpp  utils.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: main.frag  main.fs  main.vert  main.vs
src/: camera.cpp  input.cpp  main.cpp  shader.cpp  texture.cpp  utils.cpp
